--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShopLib\ShopLib.csproj" />
+  </ItemGroup>
+
 </Project>
